tests/NormalTests/paczka1/fuzzy1/56270917.err
Error in line 4: S616 A711 70,9
Error in line 1: 972nW23w S616 89,8
Error in line 22: eXRZh2q S616 12,8
Error in line 27: eXRZh2q S864 90,8
Error in line 31: 9i5WbzKCV S616 58,0
